@startuml domain_exceptions
!theme blueprint

title Bookshelf — Domain Exceptions

abstract class DomainException <<Exception>> {
}

abstract class DomainValidationError <<Exception>> {
}

class RequiredFieldError <<Exception>> {
    entity_name : str
    field_name : str
}

class EmptyBookTitleError <<Exception>> {
    "Book title must not be empty"
}

class BookTitleTooLongError <<Exception>> {
    max_length : int
}

class InvalidISBNError <<Exception>> {
    "ISBN format is invalid"
}

class EmptySummaryError <<Exception>> {
    "Summary must not be empty"
}

class SummaryTooLongError <<Exception>> {
    max_length : int
}

class InvalidPublishedYearError <<Exception>> {
    "Published year is out of range"
}

class InvalidPageCountError <<Exception>> {
    "Page count must be positive"
}

class PageCountTooHighError <<Exception>> {
    max_value : int
}

class EmptyGenreNameError <<Exception>> {
    "Genre name must not be empty"
}

class GenreNameTooLongError <<Exception>> {
    max_length : int
}

class InvalidRatingError <<Exception>> {
    "Rating must be between 1 and 5"
}

class EmptyReviewCommentError <<Exception>> {
    "Review comment must not be empty"
}

class ReviewCommentTooLongError <<Exception>> {
    max_length : int
}

class EmptyAuthorNameError <<Exception>> {
    "Author first and last name must not be empty"
}

class AuthorNameTooLongError <<Exception>> {
    max_length : int
}

class EmptyAuthorBiographyError <<Exception>> {
    "Author biography must not be empty"
}

class AuthorBiographyTooLongError <<Exception>> {
    max_length : int
}

abstract class InvalidOperationError <<Exception>> {
}

class DuplicateReviewError <<Exception>> {
    review_id : str
}

class ReviewNotFoundError <<Exception>> {
    review_id : str
}

class DuplicateGenreError <<Exception>> {
    genre_name : str
}

class GenreNotFoundError <<Exception>> {
    genre_name : str
}

class DuplicateIsbnError <<Exception>> {
    isbn : str
}

class LastGenreRemovalError <<Exception>> {
    "Cannot remove the last genre from a book"
}

class AuthorHasBooksError <<Exception>> {
    author_id : str
}

' ── Hierarchy ──────────────────────────────────────────────

DomainException <|-- DomainValidationError
DomainException <|-- InvalidOperationError

DomainValidationError <|-- RequiredFieldError
DomainValidationError <|-- EmptyBookTitleError
DomainValidationError <|-- BookTitleTooLongError
DomainValidationError <|-- InvalidISBNError
DomainValidationError <|-- EmptySummaryError
DomainValidationError <|-- SummaryTooLongError
DomainValidationError <|-- InvalidPublishedYearError
DomainValidationError <|-- InvalidPageCountError
DomainValidationError <|-- PageCountTooHighError
DomainValidationError <|-- EmptyGenreNameError
DomainValidationError <|-- GenreNameTooLongError
DomainValidationError <|-- InvalidRatingError
DomainValidationError <|-- EmptyReviewCommentError
DomainValidationError <|-- ReviewCommentTooLongError
DomainValidationError <|-- EmptyAuthorNameError
DomainValidationError <|-- AuthorNameTooLongError
DomainValidationError <|-- EmptyAuthorBiographyError
DomainValidationError <|-- AuthorBiographyTooLongError

InvalidOperationError <|-- DuplicateReviewError
InvalidOperationError <|-- ReviewNotFoundError
InvalidOperationError <|-- DuplicateGenreError
InvalidOperationError <|-- GenreNotFoundError
InvalidOperationError <|-- DuplicateIsbnError
InvalidOperationError <|-- LastGenreRemovalError
InvalidOperationError <|-- AuthorHasBooksError

@enduml
